--- a/notebooks/calculations_churn.ipynb
+++ b/notebooks/calculations_churn.ipynb
@@ -17369,21 +17369,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 15483 rows with empty top_churn_events\n"
+      "Found 15773 rows with empty top_churn_events\n"
      ]
     }
    ],
    "source": [
     "# Count how many rows have empty top_churn_events\n",
     "count_response = (\n",
-    "    supabase.table(\"user_table\")\n",
+    "    supabase.table(\"user_table_refined_v2\")\n",
     "    .select(\"*\", count=\"exact\")\n",
     "    .or_(\"top_churn_events.is.null,top_churn_events.eq.[]\")\n",
     "    .execute()\n",
@@ -17394,21 +17394,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleted 15483 rows\n"
+      "Deleted 15773 rows\n"
      ]
     }
    ],
    "source": [
     "# Delete them\n",
     "delete_response = (\n",
-    "    supabase.table(\"user_table\")\n",
+    "    supabase.table(\"user_table_refined_v2\")\n",
     "    .delete()\n",
     "    .or_(\"top_churn_events.is.null,top_churn_events.eq.[]\")\n",
     "    .execute()\n",
@@ -17419,7 +17419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -17474,7 +17474,7 @@
    ],
    "source": [
     "# Query to get top 10 most common churn events across all users\n",
-    "query_response = supabase.table(\"user_table_refined\").select(\"top_churn_events\").execute()\n",
+    "query_response = supabase.table(\"user_table_refined_v2\").select(\"top_churn_events\").execute()\n",
     "\n",
     "# Flatten all churn events\n",
     "all_churn_events = []\n",
