--- a/notebooks/calculations_retention.ipynb
+++ b/notebooks/calculations_retention.ipynb
@@ -18457,7 +18457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -18468,51 +18468,51 @@
       "Top 10 Most Common Retention Events:\n",
       "--------------------------------\n",
       "Event: application-window-opened\n",
-      "Number of Users: 1061\n",
-      "Percentage of Users: 48.5%\n",
+      "Number of Users: 633\n",
+      "Percentage of Users: 46.1%\n",
       "--------------------------------\n",
       "Event: dashboard:my-book::view\n",
-      "Number of Users: 515\n",
-      "Percentage of Users: 23.6%\n",
-      "--------------------------------\n",
-      "Event: dashboard:my-book:configurable-table:render\n",
-      "Number of Users: 448\n",
-      "Percentage of Users: 20.5%\n",
-      "--------------------------------\n",
-      "Event: agency-dashboard:::view\n",
-      "Number of Users: 441\n",
-      "Percentage of Users: 20.2%\n",
-      "--------------------------------\n",
-      "Event: agency-dashboard::configurable-table:render\n",
-      "Number of Users: 382\n",
-      "Percentage of Users: 17.5%\n",
-      "--------------------------------\n",
-      "Event: account-lines:::view\n",
-      "Number of Users: 294\n",
-      "Percentage of Users: 13.4%\n",
-      "--------------------------------\n",
-      "Event: agency-account:::view\n",
-      "Number of Users: 292\n",
-      "Percentage of Users: 13.4%\n",
+      "Number of Users: 407\n",
+      "Percentage of Users: 29.6%\n",
       "--------------------------------\n",
       "Event: action-center:::close-click\n",
-      "Number of Users: 282\n",
-      "Percentage of Users: 12.9%\n",
+      "Number of Users: 259\n",
+      "Percentage of Users: 18.9%\n",
       "--------------------------------\n",
-      "Event: submissions:all-account:configurable-table:render\n",
+      "Event: account-lines:::view\n",
+      "Number of Users: 255\n",
+      "Percentage of Users: 18.6%\n",
+      "--------------------------------\n",
+      "Event: agency-dashboard:::view\n",
+      "Number of Users: 247\n",
+      "Percentage of Users: 18.0%\n",
+      "--------------------------------\n",
+      "Event: dashboard:my-book:configurable-table:render\n",
       "Number of Users: 239\n",
-      "Percentage of Users: 10.9%\n",
+      "Percentage of Users: 17.4%\n",
       "--------------------------------\n",
-      "Event: agency-account::configurable-table:render\n",
-      "Number of Users: 236\n",
-      "Percentage of Users: 10.8%\n",
+      "Event: agency-account:::view\n",
+      "Number of Users: 201\n",
+      "Percentage of Users: 14.6%\n",
+      "--------------------------------\n",
+      "Event: agency-dashboard::configurable-table:render\n",
+      "Number of Users: 194\n",
+      "Percentage of Users: 14.1%\n",
+      "--------------------------------\n",
+      "Event: account:::view\n",
+      "Number of Users: 193\n",
+      "Percentage of Users: 14.1%\n",
+      "--------------------------------\n",
+      "Event: account-lines::configurable-table:render\n",
+      "Number of Users: 169\n",
+      "Percentage of Users: 12.3%\n",
       "--------------------------------\n"
      ]
     }
    ],
    "source": [
     "# Query to get top 10 most common retention events across all users\n",
-    "query_response = supabase.table(\"user_table_refined\").select(\"top_retention_events\").execute()\n",
+    "query_response = supabase.table(\"user_table_refined_v2\").select(\"top_retention_events\").execute()\n",
     "\n",
     "# Flatten all retention events and count occurrences\n",
     "event_counts = {}\n",
@@ -18542,13 +18542,6 @@
     "    print(f\"Percentage of Users: {percentage:.1f}%\")\n",
     "    print(\"--------------------------------\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
