--- a/notebooks/calculations_top_events.ipynb
+++ b/notebooks/calculations_top_events.ipynb
@@ -4244,7 +4244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -4252,34 +4252,54 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Top 5 Most Common Events Overall:\n",
+      "Top 10 Most Common Events Overall:\n",
       "--------------------------------\n",
       "Event: application-window-opened\n",
-      "Number of Users: 1106\n",
-      "Percentage of Users: 66.0%\n",
+      "Number of Users: 1011\n",
+      "Percentage of Users: 73.0%\n",
       "--------------------------------\n",
       "Event: account-lines:::view\n",
-      "Number of Users: 615\n",
-      "Percentage of Users: 36.7%\n",
+      "Number of Users: 579\n",
+      "Percentage of Users: 41.8%\n",
       "--------------------------------\n",
       "Event: account:::view\n",
-      "Number of Users: 530\n",
-      "Percentage of Users: 31.6%\n",
+      "Number of Users: 526\n",
+      "Percentage of Users: 38.0%\n",
       "--------------------------------\n",
       "Event: dashboard:my-book::view\n",
-      "Number of Users: 471\n",
-      "Percentage of Users: 28.1%\n",
+      "Number of Users: 427\n",
+      "Percentage of Users: 30.8%\n",
       "--------------------------------\n",
       "Event: account-lines::widget:render\n",
-      "Number of Users: 404\n",
-      "Percentage of Users: 24.1%\n",
+      "Number of Users: 322\n",
+      "Percentage of Users: 23.2%\n",
+      "--------------------------------\n",
+      "Event: agency-dashboard:::view\n",
+      "Number of Users: 259\n",
+      "Percentage of Users: 18.7%\n",
+      "--------------------------------\n",
+      "Event: dashboard:my-book:widget:render\n",
+      "Number of Users: 247\n",
+      "Percentage of Users: 17.8%\n",
+      "--------------------------------\n",
+      "Event: dashboard:my-book:configurable-table:render\n",
+      "Number of Users: 246\n",
+      "Percentage of Users: 17.8%\n",
+      "--------------------------------\n",
+      "Event: account-lines::configurable-table:render\n",
+      "Number of Users: 200\n",
+      "Percentage of Users: 14.4%\n",
+      "--------------------------------\n",
+      "Event: agency-dashboard::configurable-table:render\n",
+      "Number of Users: 195\n",
+      "Percentage of Users: 14.1%\n",
       "--------------------------------\n"
      ]
     }
    ],
    "source": [
-    "# Query to get top 5 most common events across all users\n",
-    "query_response = supabase.table(\"user_table_refined\").select(\"top_events\").execute()\n",
+    "# Query to get top 10 most common events across all users\n",
+    "query_response = supabase.table(\"user_table_refined_v2\").select(\"top_events\").execute()\n",
     "\n",
     "# Flatten all events and count occurrences\n",
     "event_counts = {}\n",
@@ -4290,19 +4310,19 @@
     "        for event in user_events:\n",
     "            event_counts[event] = event_counts.get(event, 0) + 1\n",
     "\n",
-    "# Get top 5 most common events\n",
-    "top_5_events = sorted(\n",
+    "# Get top 10 most common events\n",
+    "top_10_events = sorted(\n",
     "    event_counts.items(),\n",
     "    key=lambda x: x[1],  # Sort by count\n",
     "    reverse=True\n",
-    ")[:5]\n",
+    ")[:10]\n",
     "\n",
     "# Calculate percentage of users for each event\n",
     "total_users = len([u for u in query_response.data if u[\"top_events\"]])\n",
     "\n",
-    "print(\"\\nTop 5 Most Common Events Overall:\")\n",
+    "print(\"\\nTop 10 Most Common Events Overall:\")\n",
     "print(\"--------------------------------\")\n",
-    "for event, count in top_5_events:\n",
+    "for event, count in top_10_events:\n",
     "    percentage = (count / total_users) * 100 if total_users > 0 else 0\n",
     "    print(f\"Event: {event}\")\n",
     "    print(f\"Number of Users: {count}\")\n",
