--- a/notebooks/other_calcs.ipynb
+++ b/notebooks/other_calcs.ipynb
@@ -35959,7 +35959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -35969,19 +35969,19 @@
       "\n",
       "Session Time Statistics:\n",
       "--------------------------------\n",
-      "Number of Users: 1,675\n",
-      "Average Session Duration: 2.78 minutes\n",
+      "Number of Users: 1,385\n",
+      "Average Session Duration: 3.08 minutes\n",
       "Maximum Session Duration: 104.15 minutes\n",
       "Median Session Duration: 0.00 minutes\n",
       "25th Percentile: 0.00 minutes\n",
-      "75th Percentile: 0.04 minutes\n",
+      "75th Percentile: 0.21 minutes\n",
       "--------------------------------\n"
      ]
     }
    ],
    "source": [
     "# Query to get session times for all users\n",
-    "query_response = supabase.table(\"user_table_refined\").select(\"average_session_time\").execute()\n",
+    "query_response = supabase.table(\"user_table_refined_v2\").select(\"average_session_time\").execute()\n",
     "\n",
     "# Filter out None values and collect all session times\n",
     "session_times = [\n",
@@ -36024,7 +36024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -36034,19 +36034,19 @@
       "\n",
       "Total Session Time Statistics:\n",
       "--------------------------------\n",
-      "Number of Users: 1,675\n",
-      "Average Total Time: 0.73 hours\n",
+      "Number of Users: 1,385\n",
+      "Average Total Time: 0.83 hours\n",
       "Maximum Total Time: 26.75 hours\n",
       "Median Total Time: 0.00 hours\n",
       "25th Percentile: 0.00 hours\n",
-      "75th Percentile: 0.00 hours\n",
+      "75th Percentile: 0.01 hours\n",
       "--------------------------------\n"
      ]
     }
    ],
    "source": [
     "# Query to get total session times for all users\n",
-    "query_response = supabase.table(\"user_table_refined\").select(\"total_session_time\").execute()\n",
+    "query_response = supabase.table(\"user_table_refined_v2\").select(\"total_session_time\").execute()\n",
     "\n",
     "# Filter out None values and collect all total session times\n",
     "session_times = [\n",
@@ -36089,7 +36089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -36099,8 +36099,8 @@
       "\n",
       "Session Frequency Statistics (30-day period):\n",
       "--------------------------------\n",
-      "Number of Users: 1,675\n",
-      "Average Sessions per User: 4.2\n",
+      "Number of Users: 1,385\n",
+      "Average Sessions per User: 4.7\n",
       "Maximum Sessions: 104\n",
       "Median Sessions: 0\n",
       "25th Percentile: 0\n",
@@ -36109,19 +36109,19 @@
       "\n",
       "Session Frequency Distribution:\n",
       "--------------------------------\n",
-      "0-1 sessions: 1,296 users (77.4%)\n",
-      "2-5 sessions: 99 users (5.9%)\n",
-      "6-10 sessions: 52 users (3.1%)\n",
-      "11-20 sessions: 91 users (5.4%)\n",
-      "21-30 sessions: 61 users (3.6%)\n",
-      "31+ sessions: 76 users (4.5%)\n",
+      "0-1 sessions: 1,051 users (75.9%)\n",
+      "2-5 sessions: 74 users (5.3%)\n",
+      "6-10 sessions: 45 users (3.2%)\n",
+      "11-20 sessions: 85 users (6.1%)\n",
+      "21-30 sessions: 59 users (4.3%)\n",
+      "31+ sessions: 71 users (5.1%)\n",
       "--------------------------------\n"
      ]
     }
    ],
    "source": [
     "# Query to get session frequencies for all users\n",
-    "query_response = supabase.table(\"user_table_refined\").select(\"frequency_of_sessions\").execute()\n",
+    "query_response = supabase.table(\"user_table_refined_v2\").select(\"frequency_of_sessions\").execute()\n",
     "\n",
     "# Filter out None values and collect all frequencies\n",
     "session_frequencies = [\n",
@@ -36174,7 +36174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -36184,8 +36184,8 @@
       "\n",
       "30-Day Retention Statistics:\n",
       "--------------------------------\n",
-      "Number of Users: 1,675\n",
-      "Average Retention Rate: 1.9%\n",
+      "Number of Users: 1,385\n",
+      "Average Retention Rate: 2.1%\n",
       "Maximum Retention Rate: 16.7%\n",
       "Median Retention Rate: 0.0%\n",
       "25th Percentile: 0.0%\n",
@@ -36194,8 +36194,8 @@
       "\n",
       "Retention Rate Distribution:\n",
       "--------------------------------\n",
-      "0%-10%: 1,644 users (98.1%)\n",
-      "10%-30%: 177 users (10.6%)\n",
+      "0%-10%: 1,354 users (97.8%)\n",
+      "10%-30%: 166 users (12.0%)\n",
       "30%-50%: 0 users (0.0%)\n",
       "50%-70%: 0 users (0.0%)\n",
       "70%-90%: 0 users (0.0%)\n",
@@ -36206,7 +36206,7 @@
    ],
    "source": [
     "# Query to get 30-day retention rates for all users\n",
-    "query_response = supabase.table(\"user_table_refined\").select(\"user_retention_30\").execute()\n",
+    "query_response = supabase.table(\"user_table_refined_v2\").select(\"user_retention_30\").execute()\n",
     "\n",
     "# Filter out None values and collect all retention rates\n",
     "retention_rates = [\n",
@@ -36254,50 +36254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Query to get daily active periods for all users\n",
-    "query_response = supabase.table(\"user_table_refined\").select(\"daily_active_periods\").execute()\n",
-    "\n",
-    "# Flatten all periods and count occurrences\n",
-    "period_counts = {}\n",
-    "for user in query_response.data:\n",
-    "    if user[\"daily_active_periods\"]:  # Check if not None or empty\n",
-    "        # Count each unique period only once per user\n",
-    "        user_periods = set(period[\"hour\"] for period in user[\"daily_active_periods\"])\n",
-    "        for period in user_periods:\n",
-    "            period_counts[period] = period_counts.get(period, 0) + 1\n",
-    "\n",
-    "# Get top 5 most common periods\n",
-    "top_5_periods = sorted(\n",
-    "    period_counts.items(),\n",
-    "    key=lambda x: x[1],  # Sort by count\n",
-    "    reverse=True\n",
-    ")[:5]\n",
-    "\n",
-    "# Calculate percentage of users for each period\n",
-    "total_users = len([u for u in query_response.data if u[\"daily_active_periods\"]])\n",
-    "\n",
-    "print(\"\\nTop 5 Most Active Time Periods:\")\n",
-    "print(\"--------------------------------\")\n",
-    "for hour, count in top_5_periods:\n",
-    "    percentage = (count / total_users) * 100 if total_users > 0 else 0\n",
-    "    # Format the time period\n",
-    "    start_hour = int(hour)\n",
-    "    end_hour = (start_hour + 1) % 24\n",
-    "    period = f\"{str(start_hour).zfill(2)}:00-{str(end_hour).zfill(2)}:00\"\n",
-    "    \n",
-    "    print(f\"Time Period: {period}\")\n",
-    "    print(f\"Number of Users: {count:,}\")\n",
-    "    print(f\"Percentage of Users: {percentage:.1f}%\")\n",
-    "    print(\"--------------------------------\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -36308,51 +36265,51 @@
       "Top 10 Most Active Time Periods:\n",
       "--------------------------------\n",
       "Time Period: 15:00-16:00\n",
-      "Number of Users: 757\n",
-      "Percentage of Users: 45.2%\n",
+      "Number of Users: 657\n",
+      "Percentage of Users: 47.4%\n",
       "--------------------------------\n",
       "Time Period: 19:00-20:00\n",
-      "Number of Users: 717\n",
-      "Percentage of Users: 42.8%\n",
+      "Number of Users: 629\n",
+      "Percentage of Users: 45.4%\n",
       "--------------------------------\n",
       "Time Period: 14:00-15:00\n",
-      "Number of Users: 709\n",
-      "Percentage of Users: 42.3%\n",
+      "Number of Users: 627\n",
+      "Percentage of Users: 45.3%\n",
       "--------------------------------\n",
       "Time Period: 16:00-17:00\n",
-      "Number of Users: 693\n",
-      "Percentage of Users: 41.4%\n",
+      "Number of Users: 583\n",
+      "Percentage of Users: 42.1%\n",
       "--------------------------------\n",
       "Time Period: 18:00-19:00\n",
-      "Number of Users: 671\n",
-      "Percentage of Users: 40.1%\n",
+      "Number of Users: 579\n",
+      "Percentage of Users: 41.8%\n",
       "--------------------------------\n",
       "Time Period: 17:00-18:00\n",
-      "Number of Users: 653\n",
-      "Percentage of Users: 39.0%\n",
+      "Number of Users: 559\n",
+      "Percentage of Users: 40.4%\n",
       "--------------------------------\n",
       "Time Period: 20:00-21:00\n",
-      "Number of Users: 597\n",
-      "Percentage of Users: 35.6%\n",
+      "Number of Users: 501\n",
+      "Percentage of Users: 36.2%\n",
       "--------------------------------\n",
       "Time Period: 13:00-14:00\n",
-      "Number of Users: 486\n",
-      "Percentage of Users: 29.0%\n",
+      "Number of Users: 441\n",
+      "Percentage of Users: 31.8%\n",
       "--------------------------------\n",
       "Time Period: 21:00-22:00\n",
-      "Number of Users: 449\n",
-      "Percentage of Users: 26.8%\n",
+      "Number of Users: 374\n",
+      "Percentage of Users: 27.0%\n",
       "--------------------------------\n",
       "Time Period: 22:00-23:00\n",
-      "Number of Users: 264\n",
-      "Percentage of Users: 15.8%\n",
+      "Number of Users: 224\n",
+      "Percentage of Users: 16.2%\n",
       "--------------------------------\n"
      ]
     }
    ],
    "source": [
     "# Query to get daily active periods for all users\n",
-    "query_response = supabase.table(\"user_table_refined\").select(\"daily_active_periods\").execute()\n",
+    "query_response = supabase.table(\"user_table_refined_v2\").select(\"daily_active_periods\").execute()\n",
     "\n",
     "# Flatten all periods and count occurrences\n",
     "period_counts = {}\n",
