--- a/notebooks/calculations_churn.ipynb
+++ b/notebooks/calculations_churn.ipynb
@@ -17369,7 +17369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -17383,7 +17383,7 @@
    "source": [
     "# Count how many rows have empty top_churn_events\n",
     "count_response = (\n",
-    "    supabase.table(\"user_table_refined_v2\")\n",
+    "    supabase.table(\"user_table_refined_v3\")\n",
     "    .select(\"*\", count=\"exact\")\n",
     "    .or_(\"top_churn_events.is.null,top_churn_events.eq.[]\")\n",
     "    .execute()\n",
@@ -17394,7 +17394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -17408,7 +17408,7 @@
    "source": [
     "# Delete them\n",
     "delete_response = (\n",
-    "    supabase.table(\"user_table_refined_v2\")\n",
+    "    supabase.table(\"user_table_refined_v3\")\n",
     "    .delete()\n",
     "    .or_(\"top_churn_events.is.null,top_churn_events.eq.[]\")\n",
     "    .execute()\n",
@@ -17514,6 +17514,67 @@
     "    print(f\"Total Occurrences: {count}\")\n",
     "    print(f\"Average Terminal Rate: {avg_rate:.2%}\")\n",
     "    print(\"--------------------------------\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully added and populated user_index in user_table_refined\n",
+      "Successfully added and populated user_index in user_table_refined_v2\n",
+      "Successfully added and populated user_index in user_table_refined_v3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_user_index(table_name):\n",
+    "    try:\n",
+    "        # First, add the column if it doesn't exist\n",
+    "        add_column_sql = f\"\"\"\n",
+    "        DO $$ \n",
+    "        BEGIN \n",
+    "            IF NOT EXISTS (\n",
+    "                SELECT 1 FROM information_schema.columns \n",
+    "                WHERE table_name = '{table_name}' \n",
+    "                AND column_name = 'user_index'\n",
+    "            ) THEN \n",
+    "                ALTER TABLE {table_name} ADD COLUMN user_index INTEGER;\n",
+    "            END IF;\n",
+    "        END $$;\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # Update the user_index using ROW_NUMBER\n",
+    "        update_sql = f\"\"\"\n",
+    "        WITH numbered_rows AS (\n",
+    "            SELECT \n",
+    "                user_id,\n",
+    "                ROW_NUMBER() OVER (ORDER BY user_id) as new_index\n",
+    "            FROM {table_name}\n",
+    "        )\n",
+    "        UPDATE {table_name}\n",
+    "        SET user_index = numbered_rows.new_index\n",
+    "        FROM numbered_rows\n",
+    "        WHERE {table_name}.user_id = numbered_rows.user_id;\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        # Execute the SQL\n",
+    "        supabase.postgrest.schema(\"public\").rpc(\"execute_sql\", {\"query\": add_column_sql}).execute()\n",
+    "        supabase.postgrest.schema(\"public\").rpc(\"execute_sql\", {\"query\": update_sql}).execute()\n",
+    "        \n",
+    "        print(f\"Successfully added and populated user_index in {table_name}\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error adding user_index to {table_name}: {e}\")\n",
+    "\n",
+    "# Add user_index to both tables\n",
+    "add_user_index(\"user_table_refined\")\n",
+    "add_user_index(\"user_table_refined_v2\")\n",
+    "add_user_index(\"user_table_refined_v3\")"
    ]
   }
  ],
